test/e2e-v2/cases/cilium/traffic-gen.yaml
# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: trafficgenerator
  labels:
    app: trafficgenerator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trafficgenerator
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app: trafficgenerator
    spec:
      containers:
        - name: trafficgenerator
          image: alpine/curl:8.9.1
          command: ["/bin/sh", "-c", "--"]
          args:
            - |
              while true; do
                curl -s -o /dev/null -w "%{http_code}\n" http://productpage:9080/productpage
                sleep 5
              done
          resources:
            requests:
              cpu: 0.1
