test/e2e-v2/cases/cilium/values.yaml
# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

oap:
  secretMounts:
    - name: cilium-tls
      secretName: hubble-server-certs
      path: /etc/config/cilium-tls
  env:
    SW_CILIUM_FETCHER_CONVERT_CLIENT_AS_SERVER_TRAFFIC: "true"
    SW_CILIUM_FETCHER: default
    SW_CILIUM_FETCHER_PEER_PORT: 443
    SW_CILIUM_FETCHER_SSL_CONNECTION: "true"
    SW_CILIUM_FETCHER_PRIVATE_KEY_FILE_PATH: /etc/config/cilium-tls/tls.key
    SW_CILIUM_FETCHER_CERT_CHAIN_FILE_PATH: /etc/config/cilium-tls/tls.crt
    SW_CILIUM_FETCHER_CA_FILE_PATH: /etc/config/cilium-tls/ca.crt

elasticsearch:
  esConfig:
    elasticsearch.yml: |
      cluster.routing.allocation.disk.threshold_enabled: false
  volumeClaimTemplate:
    accessModes: [ "ReadWriteOnce" ]
    resources:
      requests:
        storage: 2Gi
  persistence:
    enabled: true
